VR: Fix DON flow permanently failing after backing out of DON flow

I missed updating the state saying we were actually in the DON flow
when I added the s8 workaround ;)

Bug: 770245
Change-Id: I858ae1c5daecf7b45c9206ed6477f29939729a58
Reviewed-on: https://chromium-review.googlesource.com/713748
Reviewed-by: Yash Malik <ymalik@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508100}
Former-commit-id: 158378368460f4fd0a70f2ddc34ea4683b22d217